--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,7 @@ jobs:
     env:
       DB_NAME: falcondb
       DB_HOST: postgres
+      DB_URL: postgresql://postgres:password@postgres:5432/falcondb?connection_limit=10&pool_timeout=20
       DB_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
       DB_USERNAME: ${{ vars.POSTGRES_USERNAME }}
       DB_PORT: 5432
