--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
     env:
       DB_NAME: falcondb
       DB_HOST: postgres
-      DB_URL: postgresql://postgres:password@postgres:5432/falcondb?connection_limit=10&pool_timeout=20
+      DB_URL: 'postgresql://postgres:password@postgres:5432/falcondb?connection_limit=10&pool_timeout=20'
       DB_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
       DB_USERNAME: ${{ vars.POSTGRES_USERNAME }}
       DB_PORT: 5432
@@ -24,7 +24,7 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_DB: falcondb
+          POSTGRES_DB: ${{env.DB_NAME}}
           POSTGRES_USER: ${{ vars.POSTGRES_USERNAME }}
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
         options: 
