pipeline changes commit@5

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,27 +13,24 @@ env:
 jobs:
   build:
     name: Build
-    env:
-      DB_NAME: falcondb
-      DB_HOST: postgres
-      DB_URL: 'postgresql://${{ vars.POSTGRES_USERNAME }}:${{ secrets.POSTGRES_PASSWORD }}@postgres:5432/falcondb?connection_limit=10&pool_timeout=20'
-      DB_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-      DB_USERNAME: ${{ vars.POSTGRES_USERNAME }}
-      DB_PORT: 5432
     services:
       postgres:
         image: postgres
         ports:
           - 5432:5432
         env:
+          POSTGRES_HOST: localhost
           POSTGRES_DB: ${{env.DB_NAME}}
           POSTGRES_USER: ${{ vars.POSTGRES_USERNAME }}
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-        options: 
-          --health-cmd="pg_isready" 
-          --health-interval=10s 
-          --health-timeout=5s
-          --health-retries=5
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+    env:
+      DB_NAME: falcondb
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_URL: 'postgresql://${{ vars.POSTGRES_USERNAME }}:${{ secrets.POSTGRES_PASSWORD }}@localhost:5432/falcondb?connection_limit=10&pool_timeout=20'
+      DB_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+      DB_USERNAME: ${{ vars.POSTGRES_USERNAME }}
     runs-on: ubuntu-latest
     steps:
       - name: checkout
