--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
-    "prisma": "^6.15.0"
+    "prisma": "^6.15.0",
+    "swagger-ui-express": "^5.0.1"
   },
   "prisma": {
     "schema": "./prisma/schema/"
